# Waterfox

./: .arcconfig  .clang-format  .clang-format-ignore  .cron.yml  .eslintignore  .eslintrc.js  .gitignore  .gitignore.orig  .gitmodules  .hg_archival.txt  .hgignore  .hgtags  .hologram.chainlink.yml  .mozconfig  .mozconfig-aarch64-apple-darwin  .mozconfig-aggressive  .mozconfig-ga  .mozconfig-ga-classic  .mozconfig-mac  .mozconfig-mingw  .mozconfig-osxcross  .mozconfig-production  .mozconfig-quick  .mozconfig-x86_64-apple-darwin  .mozconfig-x86_64-pc-linux-gnu  .mozconfig-x86_64-pc-windows-msvc  .mozconfig-x86_64-unknown-linux-gnu  .mozconfig-x86_64-w64-mingw32  .mozconfig_android  .taskcluster.yml  .tm_properties  7823460f5239  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.GA  Dockerfile.linux  ICL-Patches.patch  Makefile.in  Patch2.txt  Patch3.txt  (+34 more)
.BUILDTOOLS/: README  guess-msvc.bat  start-shell-icc14-msvc2010-x64.bat  start-shell-icc14-msvc2012-x64.bat  start-shell-l10n.bat  start-shell-msvc2010-x64.bat  start-shell-msvc2010.bat  start-shell-msvc2012-x64.bat  start-shell-msvc2012.bat  start-shell-msvc2013-x64.bat  start-shell-msvc2013.bat
.cargo/: config.in
.github/: FUNDING.yml
.zed/: settings.json
BUILDTOOLS/: README.Waterfox.txt  start-shell-msvc2013-x64.bat  start-shell-msvc2013.bat  start-shell-msvc2015-x64.bat  start-shell-msvc2015.bat  start-shell.bat
_Plasma_Build/: 0001-Bug-1384062-Make-SystemResourceMonitor.stop-more-res.patch  build_kwaterfox.sh  build_waterfox.sh  clip-ft-glyph.diff  disable_e10s.patch  firefox-kde-54.0.patch  fix-wifi-scanner.diff  fix_crash_e10s_upload_cancel.patch  fix_waterfox_browser-kde_xul.patch  fixformach.diff  glibc-2.26-fix.diff  harmony-fix.diff  kde.js  mozilla-kde-54.0.patch  no-crmf.diff  no-plt.diff  pgo_fix_missing_kdejs.patch  wifi-disentangle.patch  wifi-fix-interface.patch
browser/: confvars.sh  moz.build  moz.configure
caps/: BasePrincipal.cpp  ContentPrincipal.cpp  NullPrincipal.cpp  OriginAttributes.cpp  nsScriptSecurityManager.cpp  nsScriptSecurityManager.h
chrome/: RegistryMessageUtils.h  nsChromeRegistry.cpp  nsChromeRegistryChrome.cpp  nsChromeRegistryContent.cpp
config/: Makefile.in  Makefile.in.orig  check_spidermonkey_style.py  config.mk  config.mk.orig  doxygen.cfg.in  gcc-stl-wrapper.template.h  milestone.txt  rules.mk  system-headers  version_win.pl
devtools/: .eslintrc.js
docs/: Makefile  conf.py  index.md  index.rst  make.bat
dom/: moz.build
hal/: Hal.cpp  Hal.h  HalInternal.h  moz.build
image/: Decoder.cpp  Decoder.h  DecoderFactory.cpp  DecoderFactory.h  Downscaler.cpp  DownscalingFilter.h  Image.cpp  Image.h  RasterImage.cpp  RasterImage.cpp.orig  RasterImage.cpp.rej  SourceBuffer.h  SurfaceCache.cpp  SurfaceCache.cpp.rej  SurfaceFilters.h  SurfacePipe.cpp  SurfacePipe.h  VectorImage.cpp  imgFrame.cpp  imgFrame.h  imgLoader.cpp  imgLoader.h  imgRequest.h
intl/: icu_sources_data.py  update-icu.sh  update-tzdata.sh
js/: moz.configure
media/gstreamer/gst-plugins-base/gst/videoconvert/: Makefile.am  Makefile.in  gstcms.c  gstcms.h  gstvideoconvert.c  gstvideoconvert.h  gstvideoconvertorc-dist.c  gstvideoconvertorc-dist.h  gstvideoconvertorc.orc  videoconvert.c  videoconvert.h
media/gstreamer/gst-plugins-good/gst/audioparsers/: Makefile.am  Makefile.in  gstaacparse.c  gstaacparse.h  gstac3parse.c  gstac3parse.h  gstamrparse.c  gstamrparse.h  gstdcaparse.c  gstdcaparse.h  gstflacparse.c  gstflacparse.h  gstmpegaudioparse.c  gstmpegaudioparse.h  gstsbcparse.c  gstsbcparse.h  gstwavpackparse.c  gstwavpackparse.h  plugin.c
media/gstreamer/gst-plugins-good/gst/auparse/: Makefile.am  Makefile.in  gstauparse.c  gstauparse.h
media/gstreamer/gst-plugins-good/gst/autodetect/: Makefile.am  Makefile.in  gstautoaudiosink.c  gstautoaudiosink.h  gstautoaudiosrc.c  gstautoaudiosrc.h  gstautodetect.c  gstautodetect.h  gstautovideosink.c  gstautovideosink.h  gstautovideosrc.c  gstautovideosrc.h
media/gstreamer/gst-plugins-good/gst/deinterlace/: Makefile.am  Makefile.in  gstdeinterlace.c  gstdeinterlace.h  gstdeinterlacemethod.c  gstdeinterlacemethod.h  tvtime-dist.c  tvtime-dist.h  tvtime.orc
media/gstreamer/gst-plugins-good/gst/deinterlace/tvtime/: greedy.c  greedyh.asm  greedyh.c  greedyhmacros.h  linear.c  linearblend.c  mmx.h  plugins.h  scalerbob.c  sse.h  tomsmocomp.c  vfir.c  weave.c  weavebff.c  weavetff.c  x86-64_macros.inc
media/gstreamer/gst-plugins-good/gst/deinterlace/tvtime/tomsmocomp/: SearchLoop0A.inc  SearchLoopBottom.inc  SearchLoopEdgeA.inc  SearchLoopEdgeA8.inc  SearchLoopOddA.inc  SearchLoopOddA2.inc  SearchLoopOddA6.inc  SearchLoopOddAH.inc  SearchLoopOddAH2.inc  SearchLoopTop.inc  SearchLoopVA.inc  SearchLoopVAH.inc  StrangeBob.inc  TomsMoCompAll.inc  TomsMoCompAll2.inc  WierdBob.inc  tomsmocompmacros.h
media/gstreamer/gst-plugins-good/gst/isomp4/: Makefile.am  Makefile.in  atoms.c  atoms.h  atomsrecovery.c  atomsrecovery.h  descriptors.c  descriptors.h  fourcc.h  gstqtmoovrecover.c  gstqtmoovrecover.h  gstqtmux-doc.c  gstqtmux-doc.h  gstqtmux.c  gstqtmux.h  gstqtmuxmap.c  gstqtmuxmap.h  gstrtpxqtdepay.c  gstrtpxqtdepay.h  isomp4-plugin.c  properties.c  properties.h  qtatomparser.h  qtdemux.c  qtdemux.h  qtdemux_dump.c  qtdemux_dump.h  qtdemux_lang.c  qtdemux_lang.h  qtdemux_types.c  qtdemux_types.h  qtpalette.h
media/gstreamer/gst-plugins-good/gst/wavparse/: Makefile.am  Makefile.in  gstwavparse.c  gstwavparse.h
mfbt/: Atomics.h  BufferList.h  CheckedInt.h  Compiler.h  Compression.cpp  HashTable.h  Maybe.h  RangedPtr.h  RecordReplay.cpp  RecordReplay.h  Snprintf.h  TextUtils.h  UniquePtr.h  WeakPtr.h  WindowsVersion.h  moz.build
mozglue/: moz.build
netwerk/socket/neqo_glue/: Cargo.toml
netwerk/test/http3server/: Cargo.toml
nsprpub/: TAG-INFO  configure  configure.bak  configure.in
parser/: moz.build
python/: mach_commands.py
remote/: Error.jsm  RemoteAgent.jsm  WindowManager.jsm  command-line-handler.js  mach_commands.py
security/: moz.build  nss.symbols  update-nspr.sh  update-nss.sh
storage/: TelemetryVFS.cpp  mozStorageConnection.cpp  (+1 more)
(+121254 files in other folders)
