[package]
name = "neqo_glue"
version = "0.1.0"
authors = ["Dragana Damjanovic <dd.mozilla@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_glue"

[dependencies]
neqo-http3 = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-transport = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-common = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-qpack = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
log = "0.4.0"
qlog = "0.4.0"

[dependencies.neqo-crypto]
git = "https://github.com/ddragana/neqo/"
branch="pr_1247"
default-features = false
features = ["gecko"]
