[package]
name = "http3server"
version = "0.1.1"
authors = ["Dragana Damjanovic <dragana.damjano@gmail.com>"]
edition = "2018"

[dependencies]
neqo-transport = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-common = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-http3 = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
neqo-qpack = { git = "https://github.com/ddragana/neqo/", branch="pr_1247" }
mio = "0.6.17"
mio-extras = "2.0.5"
log = "0.4.0"

[dependencies.neqo-crypto]
git = "https://github.com/ddragana/neqo/"
branch="pr_1247"
default-features = false
features = ["gecko"]

# Make sure to use bindgen's runtime-loading of libclang, as it allows for a wider range of clang versions to be used
[build-dependencies]
bindgen = {version = "0.56", default-features = false, features = ["runtime"] }

[[bin]]
name = "http3server"
path = "src/main.rs"
